--- a/app/static/index.html
+++ b/app/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Direct Preference Optimization</title>
+    <title>Model Distillation</title>
     <!-- Bootstrap CSS from CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -15,10 +15,10 @@
     <div class="jumbotron text-center p-5 shadow rounded-custom">
         <!-- Header with centralized heading and link -->
         <div class="d-flex flex-column align-items-center mb-4">
-            <h1 class="display-4 font-weight-bold text-dark mb-3">Direct Preference Optimization</h1>
+            <h1 class="display-4 font-weight-bold text-dark mb-3">Model Distillation</h1>
         </div>
         
-        <p class="lead text-muted">Get Curated Response Based On Your Inputs</p>
+        <p class="lead text-muted">Get Toxicity Based On Your Inputs</p>
         
         <hr class="my-4">
         <form id="searchForm" class="text-left">
@@ -27,7 +27,7 @@
                 <input type="text" class="form-control" id="search" placeholder="Enter search text">
                 <small id="searchTextError" class="form-text text-danger"></small>
             </div>
-            <button type="submit" class="btn btn-gradient btn-lg btn-block mt-4">Generate Response</button>
+            <button type="submit" class="btn btn-gradient btn-lg btn-block mt-4">Get Prediction</button>
         </form>
         <!-- Result Display Section -->
         <div id="resultContainer" class="result-container mt-5 p-4 text-center shadow-lg" style="display: none;">
@@ -37,7 +37,7 @@
 </div>
 
 <footer class="text-center text-muted mt-5">
-    <p>&copy; 2025 DirectPreferenceOptimization. All rights reserved.</p>
+    <p>&copy; 2025 ModelDistillation. All rights reserved.</p>
 </footer>
 
 <!-- Bootstrap JS and dependencies from CDN -->
